# localmind-e2e-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  start.sh
app/: main.py
