[tool.poetry]
name = "localmind-e2e-api"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.2"
dotenv = "^0.9.9"
fastapi = "^0.115.12"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
